- Graphs (both BUG and Vanilla) now include a 'log scale' option
- Autolog
	Amount of gold from pillages
	Retreat and withdrawal [BULL]
	Collateral and flanking damage [BULL]
	Upgraded units [BULL]
- Strategy Overlay
	Configurable color palette (not yet committed)

Bug Fixes:

- Fixed City Built event
- Changed Scoreboard items (WHEOOH, Number of Cities) so that they are optional


MODDING

New Features:

- BugDll module for creating Python features that depend on the DLL but work gracefully without it
- Added "dll" attribute to <mod>, <option>, <list>, <init>, <event>, <events> and <shortcut>
	The <mod>, <option> and <list> elements are still created but marked if the DLL isn't the correct version; the others are ignored
- DealUtil
	Deal class has new CvDeal functions, plus more
	Added several helpful module functions for testing TradeableItems values
- Exposed and/or replicated several CvDeal functions in DealUtil.Deal:
	bool isCancelable(PlayerTypes eByPlayer, bool bIgnoreWaitingPeriod=False)
	wstring getCannotCancelReason(PlayerTypes eByPlayer)
	int turnsToCancel(PlayerTypes eByPlayer)
- Events
	unitUpgraded(CyUnit pOldUnit, CyUnit pNewUnit, int iCost) [BULL]
	combatWithdrawal(CyUnit pAttacker, CyUnit pDefender) [BULL]
	combatRetreat(CyUnit pAttacker, CyUnit pDefender) [BULL]
	combatLogCollateral(CyUnit pAttacker, CyUnit pDefender, int iDamage) [BULL]
	combatLogFlanking(CyUnit pAttacker, CyUnit pDefender, int iDamage) [BULL]
- BugUtil
	getText() and getPlainText() both replace [ICON_XXX] in the message
	Added deferCall() to call a function in a future gameUpdate event after an optional delay
	Added alertInput() and alertInputFlags() that print to the screen using alert() instead of debug()
- CvUtil
	Added CvUtil.getNewScreenID() so mods don't have to hard-code screen IDs

Bug Fixes:

- Removed firing of gameUpdate in updateScreen() as it seems to be fired by BTS now

